--- a/site-senac/src/index.css
+++ b/site-senac/src/index.css
@@ -2,6 +2,6 @@ body {
     margin: 0;
     justify-content: center;
     height: 100vh;
-    font-family: Arial, sans-serif;
+    width: 100vw;
    
   }
