--- a/site-senac/src/components/principal/styles.css
+++ b/site-senac/src/components/principal/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 /* Estilo do Container */
 #container {
     margin: 0;
@@ -5,23 +6,33 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to right, #5596f8, rgb(1, 15, 54));
+    background: linear-gradient(to right, #07224b, rgb(0, 3, 12));
     position: relative;
 }
 
+#botao1 {
+    font-family: "Montserrat", arial;
+    font-size: 16px;
+}
+
 nav {
-    text-align: center;
+    text-align: left;
+    max-width: 30%;
 }
 
 #titulo {
-    font-size: 50px;
-    font-family: serif;
-    color: hsl(0, 0%, 0%);
+    font-size: 36px;
+    font-family: "Montserrat", sans-serif;
+    color:#f5f5f5;
+    padding-bottom: 2rem; 
 }
 
 #subtitulo {
-    font-size: 30px;
-    font-family:serif;
+    font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+    color: #f5f5f5;
+    padding-bottom: 2rem; 
+
 }
 
 img {
@@ -35,7 +46,7 @@ img {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #00d1b2;
+    background-color: #000000;
     color: white;
     border-radius: 50%;
     padding: 15px;
@@ -47,7 +58,7 @@ img {
 }
 
 .chat-toggle-btn:hover {
-    background-color: #00b59c;
+    background-color: #f5f5f5;
 }
 
 /* Estilos para o Modal (Chatbot) */
