--- a/site-senac/src/index.css
+++ b/site-senac/src/index.css
@@ -1,7 +1,3 @@
-body {
-    margin: 0;
-    justify-content: center;
-    height: 100vh;
-    width: 100vw;
-   
-  }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
