--- a/site-senac/src/components/principal/styles.css
+++ b/site-senac/src/components/principal/styles.css
@@ -11,16 +11,17 @@
 }
 
 #botao1 {
+    padding: 3rem;
     font-family: "Montserrat", arial;
     font-size: 16px;
 }
 
 #nav-principal {
     text-align: left;
-    max-width: 30%;
 }
 
 #titulo {
+    padding: 3rem;
     font-size: 36px;
     font-family: "Montserrat", sans-serif;
     color:#f5f5f5;
@@ -28,6 +29,7 @@
 }
 
 #subtitulo {
+    padding: 3rem;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
     color: #f5f5f5;
@@ -35,8 +37,9 @@
 
 }
 
-img {
-    
+#frontal {
+    width: 900px;
+    height: 100%;    
 }
 
 /* Responsividade */
