--- a/site-senac/src/components/navbar/styles.css
+++ b/site-senac/src/components/navbar/styles.css
@@ -12,11 +12,16 @@
     z-index: 20;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
+.navbar-espaço {
+    width: 2000px;
+    margin: 0 20rem;
+    
+}
 
 .navbar-container {
     max-width: 1280px;
-    margin: 0 auto;
-    padding: 1.5rem 2rem;
+    margin: 0 2rem 0 2rem;
+    padding: 0.8rem 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -53,7 +58,7 @@
 }
 
 .navbar1-link {
-    color: #4b5563;
+    color: #e9eaec;
     font-weight: 500;
     position: relative;
     padding: 0.5rem 0;
@@ -107,7 +112,7 @@
 
 @media (max-width: 768px) {
     .navbar-container {
-        padding: 1rem;
+        padding: 1rem 20px;
     }
 
     .navbar-brand {
@@ -142,7 +147,7 @@
 
 @media (max-width: 480px) {
     .navbar-container {
-        padding: 0.75rem;
+        padding: 0.75rem 20px;
     }
 
     .navbar-brand {
