--- a/site-senac/src/components/rodape/styles.css
+++ b/site-senac/src/components/rodape/styles.css
@@ -24,6 +24,7 @@
 .footer-links {
     display: flex;
     gap: 1.5rem;
+    margin: 0.4rem;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -50,6 +51,13 @@
     font-size: 0.875rem;
 }
 
+.footer-icons {
+    display: flex;
+    gap: 1.5rem;
+    margin: 0.4rem;
+    align-items: center;
+    flex-wrap: wrap;
+}
 /* Breakpoints responsivos */
 @media (max-width: 768px) {
     .footer {
